Added: dev/prod profiles, nginx config, docker files; Refactored: backend app name (#7)